[package]
name = "iroh-automerge-repo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = ""
repository = "https://github.com/n0-computer/n0des"

[dependencies]
anyhow = "1"
automerge = "0.6.1"
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["debug"] }
iroh = "0.90"
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", branch = "main" }
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "main" }
n0-future = "0.1.3"
samod = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
# samod = { path = "../samod/samod" }
# samod-core = { path = "../samod/samod-core" }
samod = { git = "https://github.com/matheus23/samod", branch = "matheus23/fix-deadlock" }
samod-core = { git = "https://github.com/matheus23/samod", branch = "matheus23/fix-deadlock" }
